tests/config_check_is_status/config_check_is_status.exp
Error ----------------------------------------------------------------------------------------------------- test.js:1:17

Cannot assign `"not a number"` to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:1:17
   1| var x: number = "not a number"; // Error: string ~> number
                      ^^^^^^^^^^^^^^ [1]

References:
   test.js:1:8
   1| var x: number = "not a number"; // Error: string ~> number
             ^^^^^^ [2]



Found 1 error
Error ----------------------------------------------------------------------------------------------------- test.js:1:17

Cannot assign `"not a number"` to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:1:17
   1| var x: number = "not a number"; // Error: string ~> number
                      ^^^^^^^^^^^^^^ [1]

References:
   test.js:1:8
   1| var x: number = "not a number"; // Error: string ~> number
             ^^^^^^ [2]



Found 1 error
